fix: leaderboards page unresponsive on smaller screens (@byseif21)

--- a/frontend/src/styles/media-queries-purple.scss
+++ b/frontend/src/styles/media-queries-purple.scss
@@ -27,6 +27,9 @@
       left: 0.1rem;
       transform: none;
     }
+    .content .tableAndUser {
+      overflow-x: hidden;
+    }
   }
   header {
     nav {
